--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,38 @@
 # Project exclude paths
 /cmake-build-debug-lldb/
 /cmake-build-release-lldb/
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/Simple_texteditor.iml
+/.idea/vcs.xml
+/cmake-build-debug/.cmake/api/v1/query/cache-v2
+/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+/cmake-build-debug/.cmake/api/v1/reply/cache-v2-1dce91b3c6610fb34abe.json
+/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-ba521868c21bd8181cb8.json
+/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-c9426745797dbc3c8e66.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
+/cmake-build-debug/.cmake/api/v1/reply/index-2023-11-19T17-38-08-0001.json
+/cmake-build-debug/.cmake/api/v1/reply/target-Simple_texteditor-Debug-bc50cb8e782501c4f565.json
+/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-8a7bb2302e0b74717519.json
+/cmake-build-debug/CMakeFiles/3.26.4/CompilerIdC/a.out
+/cmake-build-debug/CMakeFiles/3.26.4/CompilerIdC/CMakeCCompilerId.c
+/cmake-build-debug/CMakeFiles/3.26.4/CompilerIdCXX/a.out
+/cmake-build-debug/CMakeFiles/3.26.4/CompilerIdCXX/CMakeCXXCompilerId.cpp
+/cmake-build-debug/CMakeFiles/3.26.4/CMakeCCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.26.4/CMakeCXXCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.26.4/CMakeDetermineCompilerABI_C.bin
+/cmake-build-debug/CMakeFiles/3.26.4/CMakeDetermineCompilerABI_CXX.bin
+/cmake-build-debug/CMakeFiles/3.26.4/CMakeSystem.cmake
+/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+/cmake-build-debug/CMakeFiles/clion-environment.txt
+/cmake-build-debug/CMakeFiles/cmake.check_cache
+/cmake-build-debug/CMakeFiles/CMakeConfigureLog.yaml
+/cmake-build-debug/CMakeFiles/rules.ninja
+/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+/cmake-build-debug/Testing/Temporary/LastTest.log
+/cmake-build-debug/build.ninja
+/cmake-build-debug/cmake_install.cmake
+/cmake-build-debug/CMakeCache.txt
