--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,11 @@
 /cmake-build-debug/build.ninja
 /cmake-build-debug/cmake_install.cmake
 /cmake-build-debug/CMakeCache.txt
+/cmake-build-debug/.cmake/api/v1/reply/cache-v2-c3af4a42073acdfebb5c.json
+/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-9e4b839b8fea99568569.json
+/cmake-build-debug/.cmake/api/v1/reply/index-2023-11-21T16-22-13-0449.json
+/cmake-build-debug/.cmake/api/v1/reply/target-Simple_texteditor-Debug-98f1a4689c003ee8f8da.json
+/cmake-build-debug/CMakeFiles/Simple_texteditor.dir/src/wx_frame.cpp.o
+/cmake-build-debug/.ninja_deps
+/cmake-build-debug/.ninja_log
+/cmake-build-debug/Simple_texteditor
